--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,32 @@
 .jumbotron {
-  background: #EEE63F;
+  background: #FAF764;
   color: #000;
 }
 
 h1 {
-  font-size: 50px;
+  color: #ff9900;
+  font-size: 40px;
+  font-weight: bold;
+}
+
+#title {
+  color: #000;
+  font-size: 45px;
+  font-weight: normal;
 }
 
 .information {
   margin-top: 50px;
+}
+
+.subsection {
+  padding-right: 10px;
+}
+
+.centeredImage {
+  margin-right: 20vw;
+}
+
+#version {
+  padding-left: 20px;
 }
